[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/effects/ScoreNormal.gd" type="Script" id=1]
[ext_resource path="res://shaders/BlendAdd.tres" type="Material" id=2]
[ext_resource path="res://sprites/effects/particles/RhombusFlash.png" type="Texture" id=3]
[ext_resource path="res://sprites/effects/particles/RhombusPart1a.png" type="Texture" id=4]
[ext_resource path="res://sprites/effects/RhombusGlow.png" type="Texture" id=5]
[ext_resource path="res://sprites/effects/particles/RhombusFlashLineThin.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Curve" id=2]
max_value = 1.5
_data = [ Vector2( 0, 0.50203 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.792847 ), 0.0, 0.0, 0, 0 ]

[node name="ScoreNormalEffect" type="Node2D"]
z_index = 20
z_as_relative = false
script = ExtResource( 1 )

[node name="ParticlesDeletion" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="JuiceTrigger" type="Timer" parent="."]
wait_time = 0.017
one_shot = true
autostart = true

[node name="Rhombuses" type="CPUParticles2D" parent="."]
material = ExtResource( 2 )
emitting = false
amount = 60
lifetime = 0.7
one_shot = true
preprocess = 0.6
texture = ExtResource( 4 )
emission_shape = 3
emission_points = PoolVector2Array( 1, -14, 1, -10, 1, -7, 1, -4, 1, -1, 1, 1, 1, 4, 1, 7, 1, 10, 1, 14, 4, -11, 4, -7, 4, -4, 4, 1, 4, 4, 4, 7, 4, 11, 7, -8, 7, -4, 7, -1, 7, 4, 7, 8, 10, -5, 10, 1, 10, 5, 13, -2, 14, 1 )
emission_colors = PoolColorArray(  )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 0.1
linear_accel = 50.0
radial_accel = 90.0
radial_accel_random = 0.3

[node name="Flash" type="CPUParticles2D" parent="."]
material = SubResource( 1 )
emitting = false
amount = 1
lifetime = 0.7
one_shot = true
texture = ExtResource( 3 )
gravity = Vector2( 0, 0 )
scale_amount_curve = SubResource( 2 )

[node name="FlashLine" type="CPUParticles2D" parent="."]
material = SubResource( 1 )
emitting = false
amount = 1
lifetime = 0.7
one_shot = true
texture = ExtResource( 6 )
gravity = Vector2( 0, 0 )
scale_amount_curve = SubResource( 2 )

[node name="Glow" type="CPUParticles2D" parent="."]
scale = Vector2( 4, 4 )
z_index = -3
z_as_relative = false
emitting = false
amount = 1
lifetime = 0.7
one_shot = true
texture = ExtResource( 5 )
gravity = Vector2( 0, 0 )
[connection signal="timeout" from="ParticlesDeletion" to="." method="_on_ParticlesDeletion_timeout"]
[connection signal="timeout" from="JuiceTrigger" to="." method="_on_JuiceTrigger_timeout"]
